--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
     <meta charset="utf8">
   </head>
 <body>
-  <img src="5333.png> 53*33 블랙라벨
+  <img src="5333.png">
+            53*33 블랙라벨</br>
+  <img src="10465.png">
+  104*65 블랙라벨(약국라벨)</br>
+  <img src="8976.png">
+89*76 블랙라벨(혈액은행)</br>
+  <img src="a4.png">
+A4용지 블랙라벨</br>
+
 <a href="/small.html">53*33 블랙라벨</a>
          </br>
 <a href="/middle1.html">104*65 블랙라벨(약국라벨)</a>
